--- a/style.css
+++ b/style.css
@@ -2,12 +2,16 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+    scroll-behavior:smooth;
+        box-sizing: border-box;
 }
-
+html{
+    scroll-behavior:smooth;
+}
 body {
     background: #080808;
-    color: #fff;
+    scroll-behavior: smooth;
+        color: #fff;
 }
 
 #header {
