--- a/style.css
+++ b/style.css
@@ -2,16 +2,14 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    scroll-behavior:smooth;
-        box-sizing: border-box;
+     box-sizing: border-box;
 }
 html{
     scroll-behavior:smooth;
 }
 body {
     background: #080808;
-    scroll-behavior: smooth;
-        color: #fff;
+color: #fff;
 }
 
 #header {
@@ -22,7 +20,13 @@ body {
     background-repeat: no-repeat;
     background-position: center;
 }
-
+/* .stick{
+    position: fixed;
+    top: 0;
+    background: red;
+    text-align: center;
+    
+} */
 .container {
     padding: 10px 10%;
 }
@@ -213,11 +217,13 @@ nav ul li a:hover::after {
 .work-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: repeat(auto-fit, max-width(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
 
 .work {
+    height: 350px;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
